--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "chainops-sdk",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "types": "index.d.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "test": "jest --coverage",
     "build": "tsc"
