--- a/package.json
+++ b/package.json
@@ -6,14 +6,19 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "test": "jest --coverage",
-    "build": "tsc"
+    "build": "tsc",
+    "standard": "standard src/**/*.ts",
+    "standard-fix": "standard src/**/*.ts --fix"
   },
   "author": "",
   "license": "",
   "devDependencies": {
     "@types/aws4": "^1.5.1",
     "@types/node": "^10.12.12",
-    "typescript": "^3.2.1"
+    "eslint-plugin-typescript": "^0.14.0",
+    "standard": "^12.0.1",
+    "typescript": "^3.2.1",
+    "typescript-eslint-parser": "^21.0.2"
   },
   "dependencies": {
     "aws-sdk": "^2.368.0",
@@ -23,5 +28,14 @@
   },
   "files": [
     "dist/*"
-  ]
+  ],
+  "standard": {
+    "parser": "typescript-eslint-parser",
+    "plugins": [
+      "typescript"
+    ],
+    "env": [
+      "jest"
+    ]
+  }
 }
