--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chainops-sdk",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -14,6 +14,8 @@
   "license": "",
   "devDependencies": {
     "@types/aws4": "^1.5.1",
+    "@types/moment": "^2.13.0",
+    "@types/moment-timezone": "^0.5.10",
     "@types/node": "^10.12.12",
     "eslint-plugin-typescript": "^0.14.0",
     "standard": "^12.0.1",
@@ -24,7 +26,9 @@
     "aws-sdk": "^2.368.0",
     "aws4": "^1.8.0",
     "axios": "^0.18.0",
-    "jest": "^23.6.0"
+    "jest": "^23.6.0",
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.23"
   },
   "files": [
     "dist/*"
@@ -37,5 +41,9 @@
     "env": [
       "jest"
     ]
+  },
+  "prettier": {
+    "semi": false,
+    "singleQuote": true
   }
 }
